--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -265,3 +265,55 @@ body{
     box-shadow: none;
     border-color: #01d262;
 }
+
+.eventEdit .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.eventEdit .box {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: 2px 6px 15px 0 rgba(69, 65, 78, 0.1);
+}
+
+.eventEdit .images {
+    height: 400px;
+    bottom: 40px;
+    overflow-y: auto;
+}
+
+.eventEdit .images img {
+    width: 462px;
+    height: 250px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin: 5px;
+}
+
+.eventEdit .button {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #01d262;
+    color: #fff;
+    border-radius: 5px;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: 600;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
+    transition: all .4s;
+}
+
+.eventEdit .button:hover{
+    background-color: green;
+}
+    
