--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -316,4 +316,78 @@ body{
 .eventEdit .button:hover{
     background-color: green;
 }
+
+/*User Info*/
+.userInfo .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.userInfo .box {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: 2px 6px 15px 0 rgba(69, 65, 78, 0.1);
+}
+
+.userInfo .images {
+    height: 400px;
+    bottom: 40px;
+    overflow-y: auto;
+}
+
+.userInfo .images img {
+    width: 240px;
+    height: 240px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 5px;
+    margin-left: 7.5rem;
+}
+
+.userInfo .button {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #01d262;
+    color: #fff;
+    border-radius: 5px;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: 600;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
+    transition: all .4s;
+}
+
+.userInfo .button:hover{
+    background-color: green;
+}
+
+
+/*Add User*/
+.addUser .heading-section{
+    background-color: #d5dadf;   
+}
+
+.addUser .path a{
+    text-decoration: none;
+    color: black;
+}
+.addUser .heading-1 a{
+    color: black;
+    text-decoration: none;
+    transition: all .4s;
+}
+
+.addUser .heading-1 a:hover{
+    color: #01d262;
+    transform: translateY(-5px);
+}
     
