--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -118,6 +118,20 @@ body{
     transform: translateY(-4px);
 }
 
+.card-common a{
+    text-decoration: none;
+    color: rgb(0, 0, 0,  0.59);
+}
+
+.card-common a:hover{
+    color: green;
+}
+
+/*Users*/
+.section-4 .btn:focus{
+    box-shadow: none;
+}
+
 /*Events*/
 .event{
     transition: all .4s;
@@ -128,6 +142,10 @@ body{
 }
 .event-border{
     border-left: 5px solid #01d262;
+}
+
+.event .btn:focus{
+    box-shadow: none;
 }
 
 /*Events*/
