--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -519,5 +519,142 @@ body{
     margin-bottom: 10rem;
 }
 
+/*Edit Event*/
+.ourfinances .heading-section{
+    background-color: #d5dadf;   
+}
 
-    
+.ourfinances .path a{
+    text-decoration: none;
+    color: black;
+}
+.ourfinances .heading-1 a{
+    color: black;
+    text-decoration: none;
+    transition: all .4s;
+}
+
+.ourfinances .heading-1 a:hover{
+    color: #01d262;
+    transform: translateY(-5px);
+}
+
+.ourfinances .menus a{
+    color: black;
+}
+
+.ourfinances .menus .nav{
+    margin-left: 15rem;
+    border-bottom: none;
+}
+
+.ourfinances .menus .nav .active{
+    border-top: 4px solid green;
+    border-bottom: transparent;
+    background-color: transparent;
+    color: black;
+}
+
+.ourfinances .card{
+    box-shadow: 1px 2px 10px #999;
+}
+
+.ourfinances .update{
+    margin-bottom: 20rem;
+}
+
+.ourfinances input:focus{
+    box-shadow: none;
+    border-color: #01d262;
+}
+
+.ourfinances textarea:focus{
+    box-shadow: none;
+    border-color: #01d262;
+}
+
+.ourfinances .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.ourfinances .box {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: 2px 6px 15px 0 rgba(69, 65, 78, 0.1);
+}
+
+.ourfinances .images {
+    height: 400px;
+    bottom: 40px;
+    overflow-y: auto;
+}
+
+.ourfinances .images img {
+    width: 462px;
+    height: 250px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin: 5px;
+}
+
+.ourfinances .button {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #01d262;
+    color: #fff;
+    border-radius: 5px;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: 600;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
+    transition: all .4s;
+}
+
+.ourfinances .button:hover{
+    background-color: green;
+}
+
+.ourfinances .Message{
+    height: 15rem;
+}
+
+.ourfinances .editor{
+    height: 10rem;
+}
+
+.ourfinances .project-select:focus{
+    box-shadow: none;
+    border-color: green;
+}
+
+.ourfinances option:hover{
+    background-color: #01d262 !important;
+}
+
+.ourfinances .projects a{
+    color: whitesmoke;
+}
+
+.ourfinances .projects a:hover{
+    text-decoration: none;
+    color: #01d262;
+}
+
+/*task list*/
+.task-border{
+    border-left: 3px solid #01a74f;
+}
+
+.btn-sm:focus{
+    box-shadow: none;
+}
