--- a/css/adminstyle.css
+++ b/css/adminstyle.css
@@ -666,3 +666,9 @@ body{
 .btn-sm:focus{
     box-shadow: none;
 }
+
+/*Progress Bars*/
+.progress .progress-bar{
+    width: 0;
+    transition: all ease 0.8s;
+}
