--- a/Admin/css/adminstyle.css
+++ b/Admin/css/adminstyle.css
@@ -6,7 +6,7 @@ body{
 /*Navbar*/
 .sidebar{
     height: 100vh;
-    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .9)), url(../images/sunset.jpg);
+    background: linear-gradient(rgba(0, 0, 0, .7), rgba(0, 0, 0, .9)), url(../../images/sunset.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -307,7 +307,7 @@ body{
 }
 
 .eventEdit .images img {
-    width: 462px;
+    width: 520px;
     height: 250px;
     border-radius: 5px;
     object-fit: cover;
@@ -344,7 +344,14 @@ body{
     width: 35rem;
 }
 
-/*Event Bookings*/
+/*Add Event*/
+.aboutEvent{
+    height: 25rem;
+}
+
+.eventEdit .editor{
+    height: 15rem;
+}
 
 /*Edit Email*/
 .editEmail{
@@ -671,4 +678,93 @@ body{
 .progress .progress-bar{
     width: 0;
     transition: all ease 0.8s;
+}
+
+/*Add Article*/
+.addArticle .heading-section{
+    background-color: #d5dadf;   
+}
+
+.addArticle .path a{
+    text-decoration: none;
+    color: black;
+}
+.addArticle .heading-1 a{
+    color: black;
+    text-decoration: none;
+    transition: all .4s;
+}
+
+.addArticle .heading-1 a:hover{
+    color: #01d262;
+    transform: translateY(-5px);
+}
+
+.addArticle .card{
+    box-shadow: 1px 2px 10px #999;
+}
+
+.addArticle .upload{
+    margin-bottom: 20rem;
+}
+
+.addArticle input:focus{
+    box-shadow: none;
+    border-color: #01d262;
+}
+
+.addArticle textarea:focus{
+    box-shadow: none;
+    border-color: #01d262;
+}
+
+.addArticle .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.addArticle .box {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: 2px 6px 15px 0 rgba(69, 65, 78, 0.1);
+}
+
+.addArticle .images {
+    height: 400px;
+    bottom: 40px;
+    overflow-y: auto;
+}
+
+.addArticle .images img {
+    width: 520px;
+    height: 250px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin: 5px;
+}
+
+.addArticle .button {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #01d262;
+    color: #fff;
+    border-radius: 5px;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: 600;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
+    transition: all .4s;
+}
+
+.addArticle .button:hover{
+    background-color: green;
 }
