--- a/Admin/css/adminstyle.css
+++ b/Admin/css/adminstyle.css
@@ -777,3 +777,97 @@ body{
 .addArticle .button:hover{
     background-color: green;
 }
+
+/*Article Details*/
+.articleDetails .heading-section{
+    background-color: #d5dadf;   
+}
+
+.articleDetails .path a{
+    text-decoration: none;
+    color: black;
+}
+.articleDetails .heading-1 a{
+    color: black;
+    text-decoration: none;
+    transition: all .4s;
+}
+
+.articleDetails .heading-1 a:hover{
+    color: #01d262;
+    transform: translateY(-5px);
+}
+
+.articleDetails .card{
+    box-shadow: 1px 2px 10px #999;
+}
+
+.articleDetails .update{
+    margin-bottom: 20rem;
+}
+
+.articleDetails input:focus{
+    box-shadow: none;
+    border-color: #01d262;
+}
+
+.articleDetails textarea:focus{
+    box-shadow: none;
+    border-color: #01d262;
+}
+
+.articleDetails .container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.articleDetails .box {
+    position: relative;
+    width: 100%;
+    height: 300px;
+    border-radius: 5px;
+    box-shadow: 2px 6px 15px 0 rgba(69, 65, 78, 0.1);
+}
+
+.articleDetails .images {
+    height: 400px;
+    bottom: 40px;
+    overflow-y: auto;
+}
+
+.articleDetails .images img {
+    width: 520px;
+    height: 250px;
+    border-radius: 5px;
+    object-fit: cover;
+    margin: 5px;
+}
+
+.articleDetails .button {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    background-color: #01d262;
+    color: #fff;
+    border-radius: 5px;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: 600;
+    font-family: "Helvetica Neue", sans-serif;
+    cursor: pointer;
+    transition: all .4s;
+}
+
+.articleDetails .button:hover{
+    background-color: green;
+}
+
+/*Reminder Email*/
+.confirmationEmail .Message{
+    height: 20rem;
+}
