--- a/css/style.css
+++ b/css/style.css
@@ -1277,16 +1277,49 @@ body{
 }
 
 
-@media screen and (max-width: 768px){
-    .section-2 .col-md-7 img{
-        width: 400px;
-        margin-top: 40%;
+@media screen and (max-width: 476px){
+    .navbar-brand span{
+        visibility: hidden;
+
     }
 
+    #navbarMenu #login{
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .carousel{
+        width: 30rem;
+        height: 29rem;
+    }
+
+    .carousel img{
+        height: 29rem !important;
+        object-fit: cover;
+    }
+
+    .carousel-caption{
+        visibility: visible;
+        font-size: medium;
+    }
+
+    .section-2 img{
+        margin-top: 0rem !important;
+        width: 27.5rem !important;
+    }
+
+    
     .section-5 .card{
-        width: 14.5rem;
+        width: 27.7rem !important;
         margin-left: 0%;
         margin-right: 0%;
+    }
+
+    .section-6 h1{
+        margin-left: 2.5rem !important;
+    }
+    .section-6 .logo2 img{
+        width: 28rem;
     }
 
     .section-7 .card{
@@ -1295,30 +1328,30 @@ body{
         margin-right: 0%;
     }
 
-    .section-9 .card{
-        width: 28rem;
-        margin-left: 0%;
-        margin-right: 0%;
+    .section-9 img{
+        width: 28rem !important;
     }
 
-    .section-10 .card{
-        width: 28rem;
-        margin-left: 0%;
-        margin-right: 0%;
+    .section-9 h1{
+        margin-top: -4rem !important;
     }
 
-    .section-15 .col-md-7 img{
-        width: 400px;
-        margin-top: 15%;
+    .section-10 img{
+        width: 27.5rem !important;
     }
 
-    .section-16 .col-md-7 img{
-        width: 400px;
-        margin-top: 10%;
+    .section-15 img{
+        width: 27.5rem !important;
+        margin-top: 0rem !important;
+    }
+
+    .section-16 img{
+        width: 27.8rem !important;
+        margin-top: 0rem !important;
     }
 
     .section-16 h1{
-        font-size: 35px;
+        margin-top: 0rem !important;
     }
 
     .section-11 .col-md-7 img{
@@ -1359,89 +1392,17 @@ body{
     .section-17 .col-md-5{
         margin-top: 11%;
     }
-}
 
-@media screen and (max-width: 894px){
-    .section-2 .col-md-7 img{
-        width: 400px;
-        margin-top: 40%;
+    .section-26 img{
+        width: 27.5rem !important;
+        height: 25rem !important;
+        object-fit: cover;
     }
 
-    .section-5 .card{
-        width: 14.5rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-7 .card{
-        width: 14.5rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-9 .card{
-        width: 28rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-10 .card{
-        width: 28rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-15 .col-md-7 img{
-        width: 400px;
-        margin-top: 15%;
-    }
-
-    .section-16 .col-md-7 img{
-        width: 400px;
-        margin-top: 10%;
-    }
-
-    .section-16 h1{
-        font-size: 35px;
-    }
-
-    .section-11 .col-md-7 img{
-        width: 400px;
-        margin-top: 20%;
-    }
-
-    .section-12 .card{
-        width: 21rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-13 .card{
-        width: 43rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-14 .card{
-        width: 43rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-18 .card{
-        width: 14rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-19 .card{
-        width: 43rem;
-        margin-left: 0%;
-        margin-right: 0%;
-    }
-
-    .section-17 .col-md-5{
-        margin-top: 11%;
+    .section-27 img{
+        width: 27.5rem !important;
+        height: 25rem !important;
+        object-fit: cover;
     }
 }
 
