--- a/css/style.css
+++ b/css/style.css
@@ -1406,6 +1406,148 @@ body{
     }
 }
 
+@media screen and (max-width: 414px){
+    .navbar-brand span{
+        visibility: hidden;
+        margin-left: -5rem;
+    }
+
+    #navbarMenu #login{
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    .carousel{
+        width: 25.9rem;
+        height: 29rem;
+    }
+
+    .carousel img{
+        height: 29rem !important;
+        object-fit: cover;
+    }
+
+    .carousel-caption{
+        visibility: visible;
+        font-size: medium;
+    }
+
+    .section-2 img{
+        margin-top: 0rem !important;
+        width: 24rem !important;
+    }
+
+    
+    .section-5 .card{
+        width: 23.9rem !important;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .section-6 h1{
+        margin-left: 2rem !important;
+    }
+    .section-6 img{
+        width: 24rem;
+    }
+
+    .section-6 .logo2 img{
+        width: 24rem;
+    }
+
+    .section-7 .card{
+        width: 14.5rem;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .section-9 img{
+        width: 24rem !important;
+    }
+
+    .section-9 h1{
+        margin-top: -4rem !important;
+    }
+
+    .section-10 img{
+        width: 24rem !important;
+    }
+
+    .section-15 img{
+        width: 24rem !important;
+        margin-top: 0rem !important;
+    }
+
+    .section-16 img{
+        width: 24rem !important;
+        margin-top: 0rem !important;
+    }
+
+    .section-16 h1{
+        margin-top: 0rem !important;
+    }
+
+    .section-11 .col-md-7 img{
+        width: 400px;
+        margin-top: 20%;
+    }
+
+    .section-12 .card{
+        width: 21rem;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .section-13 .card{
+        width: 43rem;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .section-14 .card{
+        width: 43rem;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .section-18 .card{
+        width: 14rem;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .section-19 .card{
+        width: 43rem;
+        margin-left: 0%;
+        margin-right: 0%;
+    }
+
+    .section-17 .col-md-5{
+        margin-top: 11%;
+    }
+
+    .section-25 .card{
+        margin-left: -0rem !important;
+    }
+
+    .section-25 .donateForm .card{
+        width: 22rem !important;
+    }
+    .section-26 img{
+        width: 24rem !important;
+        height: 25rem !important;
+        object-fit: cover;
+    }
+
+    .section-27 img{
+        width: 24rem !important;
+        height: 25rem !important;
+        object-fit: cover;
+    }
+}
+
+
+
 @media screen and (max-width: 320px){
     .navbar-brand{
         font-size: 17px;
