--- a/css/style.css
+++ b/css/style.css
@@ -1604,7 +1604,7 @@ body{
     }
 
     .section-7 .card{
-        width: 14.5rem;
+        width: 20.5rem !important;
         margin-left: 0%;
         margin-right: 0%;
     }
@@ -1659,7 +1659,7 @@ body{
     }
 
     .section-18 .card{
-        width: 14rem;
+        width: 20.5rem !important;
         margin-left: 0%;
         margin-right: 0%;
     }
@@ -1694,122 +1694,160 @@ body{
     }
 
     .modal{
-        height: 35rem;
+        height: 38rem;
         width: 22.5rem;
     }
 }
 
-@media screen and (max-width: 320px){
-    .navbar-brand{
-        font-size: 17px;
-    }
-    .carousel .carousel-item{
-        height: 400px;
-    }
-    .carousel .carousel-item img{
-        height: 400px;
+@media screen and (max-width: 375px){
+    .navbar-brand span{
+        visibility: hidden;
+        margin-left: -15rem;
     }
 
-    .section-2 .col-md-7 img{
-        width: 292px;
-        margin-top: 10%;
+    #navbarMenu #login{
+        margin-top: 1rem;
+        margin-bottom: 1rem;
     }
 
-    .section-3 h4{
-        font-size: 20px;
+    .carousel{
+        width: 23.5rem;
+        height: 29rem;
     }
 
-    .section-4 .heading-1{
-        font-size: 30px;
-        text-align: center;
+    .carousel img{
+        height: 29rem !important;
+        object-fit: cover;
     }
 
+    .carousel-caption{
+        visibility: visible;
+        font-size: medium;
+    }
+
+    .section-2{
+        width: 23.5rem;
+    }
+
+    .section-2 img{
+        margin-top: 0rem !important;
+        width: 21.5rem !important;
+    }
+
+    
     .section-5 .card{
-        width: 18rem;
+        width: 21.5rem !important;
         margin-left: 0%;
         margin-right: 0%;
     }
 
-    .section-5 .para-1, .card-text{
-        font-size: 18px;
+    .section-6{
+        width: 23.5rem;
+    }
+    .section-6 h1{
+        margin-left: 2rem !important;
+    }
+
+    .section-6 img{
+        width: 20rem;
+    }
+
+    .section-6 .logo2 img{
+        width: 20rem;
     }
 
     .section-7 .card{
-        width: 18rem;
+        width: 21.5rem !important;
         margin-left: 0%;
         margin-right: 0%;
     }
 
-    .section-7 .para-1{
-        font-size: 18px;
+    .section-9 img{
+        width: 20rem !important;
     }
 
-    .section-7 .card-text{
-        font-size: 18px;
+    .section-9 h1{
+        margin-top: -4rem !important;
     }
 
-    .section-9 .card{
-        width: 18.2rem;
-        margin-left: 0%;
-        margin-right: 0%;
+    .section-10 img{
+        width: 20rem !important;
     }
 
-    .section-10 .card{
-        width: 18.2rem;
-        margin-left: 0%;
-        margin-right: 0%;
+    .section-15 img{
+        width: 20.5rem !important;
+        margin-top: 0rem !important;
     }
 
-    .section-15 .col-md-7 img{
-        width: 292px;
-        margin-top: 10%;
-    }
-
-    .section-16 .col-md-7 img{
-        width: 292px;
-        margin-top: 5%;
+    .section-16 img{
+        width: 21.5rem !important;
+        margin-top: 0rem !important;
     }
 
     .section-16 h1{
-        font-size: 35px;
+        margin-top: 0rem !important;
     }
 
     .section-11 .col-md-7 img{
-        width: 292px;
+        width: 400px;
         margin-top: 20%;
     }
 
     .section-12 .card{
-        width: 18.2rem;
+        width: 21rem;
         margin-left: 0%;
         margin-right: 0%;
     }
 
     .section-13 .card{
-        width: 18.2rem;
+        width: 43rem;
         margin-left: 0%;
         margin-right: 0%;
     }
 
     .section-14 .card{
-        width: 18.2rem;
+        width: 43rem;
         margin-left: 0%;
         margin-right: 0%;
     }
 
     .section-18 .card{
-        width: 18.2rem;
+        width: 21.5rem !important;
         margin-left: 0%;
         margin-right: 0%;
     }
 
     .section-19 .card{
-        width: 18.2rem;
+        width: 43rem;
         margin-left: 0%;
         margin-right: 0%;
     }
 
     .section-17 .col-md-5{
         margin-top: 11%;
+    }
+
+    .section-25 .card{
+        margin-left: -0.6rem !important;
+    }
+
+    .section-25 .donateForm .card{
+        width: 22rem !important;
+    }
+    .section-26 img{
+        width: 21.5rem !important;
+        height: 21.5rem !important;
+        object-fit: cover;
+    }
+
+    .section-27 img{
+        width: 21.5rem !important;
+        height: 21.5rem !important;
+        object-fit: cover;
+    }
+
+    .modal{
+        height: 38rem;
+        width: 23.5rem;
     }
 }
